--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,9 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "carbon-components": "^10.53.0",
+    "carbon-components-react": "^7.53.0",
+    "carbon-icons": "^7.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.2.1"
   }
 }
